fix nav spacing issue on landing page

--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -1,13 +1,15 @@
 @import 'variables';
 
+#user-navbar {
+  margin-bottom: 0;
+  .container {
+    /* padding: inherit !important; */
+  }
+}
 .container {
   padding: 0 0 0 0;
   margin: 0 0 0 0;
   width: 100%;
-}
-
-#user-navbar {
-  margin-bottom: 0;
 }
 
 body {
