--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,9 +5,11 @@
   background-color: $brand-primary;
 }
 #user-navbar {
-  .container {
+  .nav-container {
     min-height: 3em;
     height: 3em;
+    margin-left: 3em;
+    margin-right: 3em;
   }
 }
 .navbar {
